[gd_scene load_steps=4 format=3 uid="uid://dqaa1mtryrv0s"]

[ext_resource type="Script" uid="uid://3dkgwoi6c8xf" path="res://addons/oasis_dialogue/input_dialog/input_dialog.gd" id="1_mikav"]
[ext_resource type="Theme" uid="uid://br6up8xh8ljsg" path="res://addons/oasis_dialogue/theme.tres" id="1_t23ho"]

[sub_resource type="CanvasTexture" id="CanvasTexture_t23ho"]

[node name="InputDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_t23ho")
script = ExtResource("1_mikav")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 0.5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_t23ho")
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Status" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
text = "already exists"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Cancel" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "cancel"

[node name="Confirm" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "done"

[connection signal="text_changed" from="CenterContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="CenterContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_button_up"]
[connection signal="button_up" from="CenterContainer/VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_button_up"]
